[metadata]
name = acsoo
description = Acsone Odoo Dev Tools
long_description = file: README.rst, CHANGES.rst
license = GPLv3+
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
  Operating System :: POSIX
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Framework :: Odoo

[options]
packages = find:
include_package_data = True
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
install_requires =
  appdirs
  click
  colorama
  configparser
  flake8==3.7.9
  lxml  # pylint-odoo dep not installed automatically?
  pip>=9.0.1
  pylint-odoo==3.1.0
  setuptools>=20,<31
  wheel>=0.29
  bumpversion

[options.entry_points]
console_scripts =
  acsoo = acsoo.main:main

[bdist_wheel]
# support py2 and py3
universal = True
