[metadata]
name = acsoo
description = Acsone Odoo Dev Tools
long_description = file: README.rst, CHANGES.rst
license = GPLv3+
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
  Operating System :: POSIX
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Framework :: Odoo

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
  appdirs
  click
  colorama
  configparser
  pip>=9.0.1
  setuptools  # must use odoo-autodiscover>=2 in Odoo<=10
  wheel>=0.29
  httpx
  tomli

[options.entry_points]
console_scripts =
  acsoo = acsoo.main:main
